fix: align menu to the right edge of the container
Fixed a layout issue by moving the navigation menu to the right side of the container.

--- a/components/Navigation/Navigation.module.scss
+++ b/components/Navigation/Navigation.module.scss
@@ -2,12 +2,14 @@
 @use "@/styles/mixins.scss" as m;
 
 .navigation {
-  @include m.flex(row, center, space-between);
+  // @include m.flex(row, center, space-between);
+  display: flex;
   @include m.container;
   position: relative;
   height: 80px;
   z-index: 10;
   padding: 1rem 0;
+  
   .logoLink {
     height: 100%;
     display: flex;
@@ -16,12 +18,14 @@
 
   .menu {
     top: 100%;
-    @include m.flex;
+    @include m.flex(row, center, flex-end);
+    width: 100%;
 
     ul {
       display: flex;
+      gap: 1.75rem;
       flex-wrap: wrap;
-      min-height: 50%;
+      // min-height: 50%;
       list-style: none;
       padding: 0;
       margin: 0;
@@ -57,9 +61,9 @@
   .navigationLinks {
     @include m.btn;
     @include m.flex;
-    padding: 1.5rem;
     margin: 0;
-    padding: 0 0.5rem;
+    padding: 0;
+    border: none;
 
     @include m.respond-max(990px) {
       width: 100%;
@@ -68,6 +72,7 @@
     a {
       color: var(--light-color);
       width: 100%;
+      padding: 0.5rem ;
 
       @include m.respond-max(990px)  {
         padding: 10px;
